--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                 </div>
                 <div class="about-image">
-                    <img src="./assets/images/123.png" alt="">
+                    <img src="./assets/images/about-img.png" alt="">
                 </div>
             </div>
         </div>
@@ -175,7 +175,7 @@
                 <div class="service-types">
                     <div class="service-icon">
 
-                        <img src="./assets/images/img 4.png" alt="">
+                        <img src="./assets/images/icon1.png" alt="">
 
                     </div>
                     <div class="service-text">
@@ -190,7 +190,7 @@
                 <div class="service-types">
                     <div class="service-icon">
 
-                        <img src="./assets/images/img 2.png" alt="">
+                        <img src="./assets/images/icon2.png" alt="">
 
                     </div>
                     <div class="service-text">
@@ -369,7 +369,7 @@
         <div class="main-row">
             <div class="col1">
                 <div class="portfolio-img">
-                    <img src="./assets/images/simple-4.png" alt="">
+                    <img src="./assets/images/portfolio-1.png" alt="">
                     <div class="portfolio-link">
                         <a href="https://siimple-website.netlify.app/">
                             <i class="fa-solid fa-arrow-right"></i>
@@ -388,7 +388,7 @@
 
             <div class="col2">
                 <div class="portfolio-img">
-                    <img src="./assets/images/5678.png" alt="">
+                    <img src="./assets/images/portfolio-2.png" alt="">
                     <div class="portfolio-link">
                         <a href="https://counterr-application.netlify.app/">
                         <i class="fa-solid fa-arrow-right"></i>
@@ -408,7 +408,7 @@
 
             <div class="col3">
                 <div class="portfolio-img">
-                    <img src="./assets/images/stop-watch3.png" alt="">
+                    <img src="./assets/images/portfolio-3.png" alt="">
                     <div class="portfolio-link">
                         <a href="https://stopwatch-applicationn.netlify.app/">
                             <i class="fa-solid fa-arrow-right"></i>
